tests/tooling/fixtures/native/recovery/negative/negative_separator_literal_parser_prefix_separator.objc3
// Expected diagnostic code(s): O3P103.
module NegativeSeparatorLiteralParserPrefixSeparator;

let value = 0x_FF;

fn main() -> i32 {
  return 0;
}
